--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "babel-plugin-transform-es2015-block-scoping": "6.15.0",
     "react": "15.4.2",
-    "react-native": "0.39.0",
+    "react-native": "^0.41.1",
     "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
